--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
 <div class="navbar">
     <div class="logo">Prashant.dev</div>
     <div class="nav-links">
-        <a href="/">Home</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/skills.html">Skills</a>
-        <a href="/contact.html">Contact</a>
+        <a href="https://yukihirai.in/">Home</a>
+        <a href="https://projects.yukihirai.in/">Projects</a>
+        <a href="https://under-construction.yukihirai.in/">Skills</a>
+        <a href="https://under-construction.yukihirai.in/">Contact</a>
     </div>
 </div>
 
@@ -212,7 +212,7 @@
         <span class="tag">OCI</span>
         <span class="tag">CI/CD</span>
         <span class="tag">DevOps</span><br>
-        <a href="#" class="link-btn">Documentation →</a>
+        <a href="/documents/OCI_DevOps_pipelie_Document.html" class="link-btn">Documentation →</a>
     </div>
 
     <div class="project-card" data-category="cloud">
